# Rosetta

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.es.md  README.md  RELEASING.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/rosetta-accel/: Cargo.toml
crates/rosetta-accel/src/: ep.rs  lib.rs
crates/rosetta-asr/: Cargo.toml
crates/rosetta-asr/src/: lib.rs  ort_util.rs  parakeet.rs  tokenizer.rs
crates/rosetta-asr/src/whisper/: mel.rs  mod.rs  tokenizer.rs
crates/rosetta-asr/tests/: npu_autoep_probe.rs  qnn_crash_stack.rs  transcribe.rs  whisper_io_dump.rs  whisper_qnn_smoke.rs  whisper_smoke.rs
crates/rosetta-audio/: Cargo.toml
crates/rosetta-audio/src/: decode.rs  denoise.rs  lib.rs  resample.rs  stft.rs  vad.rs
crates/rosetta-audio/tests/: decode.rs  vad_smoke.rs
crates/rosetta-cli/: Cargo.toml
crates/rosetta-cli/src/: batch.rs  main.rs  profile.rs
crates/rosetta-core/: Cargo.toml
crates/rosetta-core/src/: lib.rs  render.rs
crates/rosetta-diarize/: Cargo.toml
crates/rosetta-diarize/src/: lib.rs  segmenter.rs
crates/rosetta-diarize/tests/: diarize_smoke.rs  pyannote_io_dump.rs
crates/rosetta-models/: Cargo.toml  models.toml
crates/rosetta-models/src/: lib.rs
crates/rosetta-pipeline/: Cargo.toml
crates/rosetta-pipeline/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
