[package]
name = "rosetta-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage = "https://github.com/dennisgr7/Rosetta"

[[bin]]
name = "rosetta"
path = "src/main.rs"

[dependencies]
rosetta-core = { workspace = true }
rosetta-accel = { workspace = true }
rosetta-audio = { workspace = true }
rosetta-asr = { workspace = true }
rosetta-models = { workspace = true }
rosetta-diarize = { workspace = true }
rosetta-pipeline = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true } # parseo de los Chrome-trace de ORT en `doctor --profile`
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = "1" # paralelismo a nivel de archivo en modo lote (Rust puro, sin C)

# Bajar la prioridad del proceso con el preset --background. Dependencias por
# target para no arrastrar C en el build de Windows ARM64: windows-sys usa
# `raw-dylib` (sin importar libs, sin compilar C) y libc es solo bindings FFI.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
